# wordle-generator

./: Cargo.toml  LICENSE
src/: feistel.rs  lib.rs
tests/: wordle.rs
